test_scores/negative_dimers/features/O43353.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/O43353.pkl.xz